"version 7.05"